zellij/src/tests/integration/snapshots/mosaic__tests__integration__resize_up__cannot_resize_up_when_pane_above_is_at_minimum_height-6.snap
---
source: src/tests/integration/resize_up.rs
expression: snapshot
---
Bye from Mosaic!█                                                                                                        
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
