zellij/src/tests/integration/snapshots/mosaic__tests__integration__resize_up__resize_up_with_panes_above_aligned_right_with_current_pane-11.snap
---
source: src/tests/integration/resize_up.rs
expression: snapshot
---
Bye from Mosaic!█                                                                                                        
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
